--- a/app/Resources/views/crmcuenta/cliente.html.twig
+++ b/app/Resources/views/crmcuenta/cliente.html.twig
@@ -39,12 +39,12 @@
                             <input type="text" name="address[]" class="input-sm form-control  txtAddress txtAddressFirst">
                         </div>
                         <div class="col-md-2 zipcode" style="margin-top:20px;">
-                            <label>{{direccionCliente}}</label>
+                            <label>{{zipCodeCliente}}</label>
                             <input type="text" name="zipcode[]" class="input-sm form-control  txtZipCode txtZipCodeFirst">
                         </div>
                         <div class="col-md-2 state" style="margin-top:20px;">
                             <label>{{departamentoCliente}}</label>
-                            <input type="text" name="addressDepartamento[]" class="input-sm form-control validateInput txtState">
+                            <input type="text" name="addressDepartamento[]" class="input-sm form-control txtState">
                             {#<select style="width:100%;" id name="addressDepartamento[]" class="input-sm form-control validateSelect dpbState dpbStateFirst">
                                     {% for estado in estados %}
                                         <option value={{estado.id}}>{{estado.nombre}}</option>
@@ -53,7 +53,7 @@
                         </div>
                         <div class="col-md-2 city" style="margin-top:20px;">
                             <label>{{ciudadCliente}}</label>
-                            <input type="text" name="addressCity[]" class="input-sm form-control validateInput txtCity">
+                            <input type="text" name="addressCity[]" class="input-sm form-control txtCity">
                             {#<select style="width:100%;" id name="addressCity[]" class="input-sm form-control validateSelect dpbCity dpbCityFirst">
                                 {% for ciudad in ciudades %}
                                     <option value={{ciudad.id}}>{{ciudad.nombre}}</option>
@@ -67,14 +67,14 @@
                         <div class="clearfix"></div>
                         <div class="col-md-2 phonesType" style="margin-top:20px;">
                             <label>{{phoneCliente}}</label>
-                            <select style="margin-top:25px; width:100%;" type="text" name="phoneType[]" class="input-sm form-control validateInput dpbTipoPhone firstPhoneType">
+                            <select style="margin-top:25px; width:100%;" type="text" name="phoneType[]" class="input-sm form-control dpbTipoPhone firstPhoneType">
                                 {% for tipo in tiposTelefono %}
                                     <option value={{tipo.id}}>{{tipo.nombre}}</option>
                                 {% endfor %}
                             </select>
                         </div>
                         <div class="col-md-2 phonesText" style="margin-top:20px;">
-                            <input style="margin-top:25px;" type="text" name="phone[]" class="input-sm form-control validateInput txtPhone firstPhoneTxt">
+                            <input style="margin-top:25px;" type="text" name="phone[]" class="input-sm form-control txtPhone firstPhoneTxt">
                         </div>
                         <div class="col-md-2 phonesExtension" style="margin-top:20px;">
                             <label>{{extensionCliente}}</label>
@@ -85,7 +85,7 @@
                         </div>
                         <div class="col-md-4 emailText" style="margin-top:20px;">
                             <label>{{emailCliente}}</label>
-                            <input type="text" name="email[]" class="input-sm form-control  txtEmail txtEmailFirst validateInput validateInputEmail">
+                            <input type="text" name="email[]" class="input-sm form-control  txtEmail txtEmailFirst ">
                         </div>
                         <div class="col-md-1 addEmail" style="margin-top:20px;">
                             <button id="plusEmail" style="margin-top:25px;" class="btn btn-success"><i class="fa fa-plus"></i></button>
