--- a/app/Resources/views/crmcuenta/cliente_potencial.html.twig
+++ b/app/Resources/views/crmcuenta/cliente_potencial.html.twig
@@ -32,26 +32,31 @@
                             <input id="txtCompania" type="text" name="compania" class="input-sm form-control validateInput">
                         </div>
                         <div class="clearfix"></div> 
-                        <div class="col-md-7 address" style="margin-top:20px;">
+                        <div class="col-md-5 address" style="margin-top:20px;">
                             <label>{{direccionClientePotencial}}</label>
-                            <input type="text" name="address[]" class="input-sm form-control validateInput txtAddress txtAddressFirst">
+                            <input type="text" name="address[]" class="input-sm form-control  txtAddress txtAddressFirst">
+                        </div>
+                        <div class="col-md-2 zipcode" style="margin-top:20px;">
+                            <label>{{zipCodeClientePotencial}}</label>
+                            <input type="text" name="zipcode[]" class="input-sm form-control  txtZipCode txtZipCodeFirst">
                         </div>
                         <div class="col-md-2 state" style="margin-top:20px;">
                             <label>{{departamentoClientePotencial}}</label>
-                            {# <input type="text" name="" class="input-sm form-control validateInput txtState"> #}
-                            <select style="width:100%;" id name="addressDepartamento[]" class="input-sm form-control validateSelect dpbState dpbStateFirst">
+                            <input type="text" name="addressDepartamento[]" class="input-sm form-control txtState">
+                            {#<select style="width:100%;" id name="addressDepartamento[]" class="input-sm form-control validateSelect dpbState dpbStateFirst">
                                     {% for estado in estados %}
                                         <option value={{estado.id}}>{{estado.nombre}}</option>
                                     {% endfor %}
-                            </select>
+                            </select>#}
                         </div>
                         <div class="col-md-2 city" style="margin-top:20px;">
                             <label>{{ciudadClientePotencial}}</label>
-                            <select style="width:100%;" id name="addressCity[]" class="input-sm form-control validateSelect dpbCity dpbCityFirst">
+                            <input type="text" name="addressCity[]" class="input-sm form-control txtCity">
+                            {#<select style="width:100%;" id name="addressCity[]" class="input-sm form-control validateSelect dpbCity dpbCityFirst">
                                 {% for ciudad in ciudades %}
                                     <option value={{ciudad.id}}>{{ciudad.nombre}}</option>
                                 {% endfor %}
-                            </select>
+                            </select>#}
                         </div>
                         
                         <div class="col-md-1 addAddress" style="margin-top:20px;">
@@ -67,7 +72,7 @@
                             </select>
                         </div>
                         <div class="col-md-2 phonesText" style="margin-top:20px;">
-                            <input style="margin-top:25px;" type="text" name="phone[]" class="input-sm form-control validateInput txtPhone firstPhoneTxt">
+                            <input style="margin-top:25px;" type="text" name="phone[]" class="input-sm form-control txtPhone firstPhoneTxt">
                         </div>
                         <div class="col-md-2 phonesExtension" style="margin-top:20px;">
                             <label>{{extensionClientePotencial}}</label>
@@ -78,7 +83,7 @@
                         </div>
                         <div class="col-md-4 emailText " style="margin-top:20px;">
                             <label>{{emailClientePotencial}}</label>
-                            <input type="text" name="email[]" class="input-sm form-control  txtEmail txtEmailFirst validateInput validateInputEmail">
+                            <input type="text" name="email[]" class="input-sm form-control  txtEmail txtEmailFirst ">
                         </div>
                         <div class="col-md-1 addEmail" style="margin-top:20px;">
                             <button id="plusEmail" style="margin-top:25px;" class="btn btn-success"><i class="fa fa-plus"></i></button>
