--- a/app/Resources/views/crmcuenta/socio.html.twig
+++ b/app/Resources/views/crmcuenta/socio.html.twig
@@ -33,26 +33,31 @@
                             <input id="txtCompania" type="text" name="compania" class="input-sm form-control validateInput">
                         </div>
                         <div class="clearfix"></div> 
-                        <div class="col-md-7 address" style="margin-top:20px;">
-                            <label>{{direccionProveedor}}</label>
-                            <input type="text" name="address[]" class="input-sm form-control validateInput txtAddress txtAddressFirst">
+                        <div class="col-md-5 address" style="margin-top:20px;">
+                            <label>{{direccionCliente}}</label>
+                            <input type="text" name="address[]" class="input-sm form-control  txtAddress txtAddressFirst">
+                        </div>
+                        <div class="col-md-2 zipcode" style="margin-top:20px;">
+                            <label>{{zipCodeCliente}}</label>
+                            <input type="text" name="zipcode[]" class="input-sm form-control  txtZipCode txtZipCodeFirst">
                         </div>
                         <div class="col-md-2 state" style="margin-top:20px;">
-                            <label>{{departamentoProveedor}}</label>
-                            {# <input type="text" name="" class="input-sm form-control validateInput txtState"> #}
-                            <select style="width:100%;" id name="addressDepartamento[]" class="input-sm form-control validateSelect dpbState dpbStateFirst">
+                            <label>{{departamentoCliente}}</label>
+                            <input type="text" name="addressDepartamento[]" class="input-sm form-control txtState">
+                            {#<select style="width:100%;" id name="addressDepartamento[]" class="input-sm form-control validateSelect dpbState dpbStateFirst">
                                     {% for estado in estados %}
                                         <option value={{estado.id}}>{{estado.nombre}}</option>
                                     {% endfor %}
-                            </select>
+                            </select>#}
                         </div>
                         <div class="col-md-2 city" style="margin-top:20px;">
-                            <label>{{ciudadProveedor}}</label>
-                            <select style="width:100%;" id name="addressCity[]" class="input-sm form-control validateSelect dpbCity dpbCityFirst">
+                            <label>{{ciudadCliente}}</label>
+                            <input type="text" name="addressCity[]" class="input-sm form-control txtCity">
+                            {#<select style="width:100%;" id name="addressCity[]" class="input-sm form-control validateSelect dpbCity dpbCityFirst">
                                 {% for ciudad in ciudades %}
                                     <option value={{ciudad.id}}>{{ciudad.nombre}}</option>
                                 {% endfor %}
-                            </select>
+                            </select>#}
                         </div>
                         
                         <div class="col-md-1 addAddress" style="margin-top:20px;">
@@ -61,14 +66,14 @@
                         <div class="clearfix"></div>
                         <div class="col-md-2 phonesType" style="margin-top:20px;">
                             <label>{{phoneProveedor}}</label>
-                            <select style="margin-top:25px; width:100%;" type="text" name="phoneType[]" class="input-sm form-control validateInput dpbTipoPhone firstPhoneType">
+                            <select style="margin-top:25px; width:100%;" type="text" name="phoneType[]" class="input-sm form-control dpbTipoPhone firstPhoneType">
                                 {% for tipo in tiposTelefono %}
                                         <option value={{tipo.id}}>{{tipo.nombre}}</option>
                                     {% endfor %}
                             </select>
                         </div>
                         <div class="col-md-2 phonesText" style="margin-top:20px;">
-                            <input style="margin-top:25px;" type="text" name="phone[]" class="input-sm form-control validateInput txtPhone firstPhoneTxt">
+                            <input style="margin-top:25px;" type="text" name="phone[]" class="input-sm form-control txtPhone firstPhoneTxt">
                         </div>
                         <div class="col-md-2 phonesExtension" style="margin-top:20px;">
                             <label>{{extensionProveedor}}</label>
@@ -79,7 +84,7 @@
                         </div>
                         <div class="col-md-4 emailText" style="margin-top:20px;">
                             <label>{{emailProveedor}}</label>
-                            <input type="text" name="email[]" class="input-sm form-control  txtEmail txtEmailFirst validateInput validateInputEmail">
+                            <input type="text" name="email[]" class="input-sm form-control  txtEmail txtEmailFirst validateInputEmail">
                         </div>
                         <div class="col-md-1 addEmail" style="margin-top:20px;">
                             <button id="plusEmail" style="margin-top:25px;" class="btn btn-success"><i class="fa fa-plus"></i></button>
