Filtros de registros activos en cuentas

--- a/app/Resources/views/crmcuenta/cliente.html.twig
+++ b/app/Resources/views/crmcuenta/cliente.html.twig
@@ -29,7 +29,7 @@
                         <div class="clearfix"></div> 
                         <div class="col-md-7" style="margin-top:20px;">
                             <label>{{companiaNombreCliente}}</label>
-                            <input id="txtCompania" type="text" name="compania" class="input-sm form-control validateInput">
+                            <input id="txtCompania" type="text" name="compania" class="input-sm form-control">
                         </div>
                         <div class="clearfix"></div> 
                         
