--- a/app/Resources/views/crmcuenta/provider.html.twig
+++ b/app/Resources/views/crmcuenta/provider.html.twig
@@ -30,11 +30,11 @@
                         <div class="clearfix"></div> 
                         <div class="col-md-7" style="margin-top:20px;">
                             <label>{{companiaNombreProveedor}}</label>
-                            <input id="txtCompania" type="text" name="compania" class="input-sm form-control validateInput">
+                            <input id="txtCompania" type="text" name="compania" class="input-sm form-control">
                         </div>
                         <div class="clearfix"></div> 
                         <div class="col-md-5 address" style="margin-top:20px;">
-                            <label>{{direccionProvider}}</label>
+                            <label>{{direccionCliente}}</label>
                             <input type="text" name="address[]" class="input-sm form-control  txtAddress txtAddressFirst">
                         </div>
                         <div class="col-md-2 zipcode" style="margin-top:20px;">
