--- a/app/Resources/views/crmcuenta/account.html.twig
+++ b/app/Resources/views/crmcuenta/account.html.twig
@@ -30,7 +30,7 @@
                         <div class="clearfix"></div> 
                         <div class="col-md-7" style="margin-top:20px;">
                             <label>{{companiaNombreAccount}}</label>
-                            <input id="txtCompania" type="text" name="compania" class="input-sm form-control validateInput">
+                            <input id="txtCompania" type="text" name="compania" class="input-sm form-control">
                         </div>
                         {# <div class="col-md-5" style="margin-top:20px;">
                             <label>{{tipoAccount}}</label>
