--- a/app/Resources/views/ctltiemponotificacion/new.html.twig
+++ b/app/Resources/views/ctltiemponotificacion/new.html.twig
@@ -35,10 +35,11 @@
                         <div class="col-md-4">
                             <label>{{unidadTiempoNotificacion}}</label>
                             <select style="width:100%" id="dpbUnidad" class="input-sm form-control validateSelect">
-                                <option value="{{minutosTiempoNotificacion}}">{{minutosTiempoNotificacion}}</option>
-                                <option value="{{diasTiempoNotificacion}}">{{diasTiempoNotificacion}}</option>
-                                <option value="{{mesesTiempoNotificacion}}">{{mesesTiempoNotificacion}}</option>
-                                <option value="{{aniosTiempoNotificacion}}">{{aniosTiempoNotificacion}}</option>
+                                <option value="{{minutosTiempoNotificacion}}-1">{{minutosTiempoNotificacion}}</option>
+                                <option value="Hours-2">Hours</option>
+                                <option value="{{diasTiempoNotificacion}}-3">{{diasTiempoNotificacion}}</option>
+                                <option value="{{mesesTiempoNotificacion}}-4">{{mesesTiempoNotificacion}}</option>
+                                <option value="{{aniosTiempoNotificacion}}-5">{{aniosTiempoNotificacion}}</option>
                             </select>
                         </div>
 
