--- a/app/Resources/views/layout/menuventas.html.twig
+++ b/app/Resources/views/layout/menuventas.html.twig
@@ -6,7 +6,14 @@
 		</span>
 	</li>
 </a>
-
+<a href="{{path('admin_opportunities_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuContactossA is defined %} active {% endif %}">
+		Contacts
+		<span class="pull-right right">
+			<i class="{% if menuContactossA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>
 <a href="{{path('admin_opportunities_index')}}" class="leftnava">
 	<li class="leftnav left {% if menuOportunidadesA is defined %}active {% endif %}">
 		{{menuOportunidad}}
