--- a/app/Resources/views/crmcontacto/index_contacto.html.twig
+++ b/app/Resources/views/crmcontacto/index_contacto.html.twig
@@ -15,7 +15,7 @@
     </style>
 {% endblock %}
 {% block navegacion %}
-    {% include ':crm_dashboard:crm_menu.html.twig' %}   
+    {% include ':layout:menuventas.html.twig' %}
 {% endblock %}
 
 {% block descripcion %}
