--- a/app/Resources/views/crmactividad/menu_actividades.html.twig
+++ b/app/Resources/views/crmactividad/menu_actividades.html.twig
@@ -1,3 +1,11 @@
+<a href="{{path('admin_activities_index')}}" class="leftnava">
+    <li class="leftnav left {% if menuTodasActividadesA is defined %}active {% endif %}">
+        {{menuTodasActividades}}
+        <span class="pull-right right">
+                <i class="{% if menuTodasActividadesA is defined %}fa fa-arrow-right {% endif %}"></i>
+        </span>
+    </li>
+</a> 
 <a href="{{path('admin_tasks_index')}}" class="leftnava">
     <li class="leftnav left {% if menuTasksA is defined %}active {% endif %}">
         {{menuTareas}}
@@ -21,15 +29,7 @@
                 <i class="{% if menuReunionesA is defined %}fa fa-arrow-right {% endif %}"></i>
         </span>
     </li>
-</a>
-<a href="{{path('admin_meetings_index')}}" class="leftnava">
-    <li class="leftnav left {% if menuTodasActividadesA is defined %}active {% endif %}">
-        All
-        <span class="pull-right right">
-                <i class="{% if menuTodasActividadesA is defined %}fa fa-arrow-right {% endif %}"></i>
-        </span>
-    </li>
-</a>                
+</a>               
 {#<a href="{{path('crmcaso_index')}}" class="leftnava">
 	<li class="leftnav left {% if menuCasoA is defined %}active {% endif %}">
 		{{menuCaso}}
