--- a/app/Resources/views/layout/menuventas.html.twig
+++ b/app/Resources/views/layout/menuventas.html.twig
@@ -6,9 +6,9 @@
 		</span>
 	</li>
 </a>
-<a href="{{path('admin_opportunities_index')}}" class="leftnava">
+<a href="{{path('admin_contact_index')}}" class="leftnava">
 	<li class="leftnav left {% if menuContactossA is defined %} active {% endif %}">
-		Contacts
+		{{menuContacto}}
 		<span class="pull-right right">
 			<i class="{% if menuContactossA is defined %}fa fa-arrow-right {% endif %}"></i>
 		</span>
